syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dubass83/simplebank/pb";

message CreateTransferRequest {
  int64 fromAccountId = 1;
  int64 toAccountId = 2;
  int64 amount = 3;
}
 
message CreateTransferResponse {
  int64 id = 1;
  int64 from_accountId = 2; 
  int64 to_accountId = 3;
  int64 amount = 4;
  google.protobuf.Timestamp created_at = 5;
}